# cmdop-skills-lab

./: .gitignore  Makefile  README.md
@docs/: README.md  commands.md  getting-started.md  publishing.md  streamlit-dashboards.md
demo/: bounces_log.json  collect_bounces.py  send_campaign.py
demo/investor-outreach/: generate_messages.py
demo/investor-outreach/data/: investors.csv  personalized_messages.json  send_log.txt
demo/openclaw-outreach/: README.md  check_bounces.py  generate_messages.py  requirements.txt  send_emails.py
demo/openclaw-outreach/data/: accounts.json  developers.json  personalized_messages.json  send_log.txt
demo/ses-experiment/: README.md  send_campaign_smtp.py  setup_account.py  test_send.py
docs/: README.md  code-guidelines.md  testing.md
libs/cmdop-coder/: Makefile  README.md  pyproject.toml
libs/cmdop-coder/skill/: readme.md
libs/cmdop-coder/src/cmdop_coder/: __init__.py  _analysis.py  _models.py  _parser.py  _skill.py
libs/cmdop-coder/tests/: conftest.py  test_analysis.py  test_models.py  test_parser.py  test_skill.py
libs/cmdop-sdkrouter/: .gitignore  Makefile  README.md  pyproject.toml
libs/cmdop-sdkrouter/skill/: readme.md
libs/cmdop-sdkrouter/src/cmdop_sdkrouter/: __init__.py  _skill.py
libs/cmdop-sdkrouter/tests/: conftest.py  test_cmdop_sdkrouter.py
libs/demo-scaffold/: .gitignore  Makefile  README.md  pyproject.toml
libs/demo-scaffold/skill/: config.py  readme.md
libs/demo-scaffold/src/demo_scaffold/: __init__.py
libs/demo-scaffold/tests/: conftest.py  test_demo_scaffold.py
libs/hello-world/: Makefile  README.md  pyproject.toml  run.py
libs/hello-world/skill/: config.py  readme.md
libs/hello-world/src/hello_world/: __init__.py  _skill.py
libs/hello-world/tests/: conftest.py  test_hello_world.py
libs/llm-email/: .gitignore  Makefile  README.md  pyproject.toml  run.py
libs/llm-email/scripts/: bounce_cron.py  seed.py  send.py
libs/llm-email/skill/: config.py  readme.md
libs/llm-email/src/llm_email/: __init__.py  account_manager.py  applescript.py  bounces.py  config.py  db.py  logger.py  mailer.py  models.py  notify.py  replies.py  types.py
libs/llm-email/src/llm_email/dashboard/: app.py  charts.py  db_reader.py
libs/llm-email/tests/: conftest.py  test_applescript.py  test_cli.py  test_mailer.py
libs/llm-html/: Makefile  README.md  pyproject.toml
libs/llm-html/skill/: config.py  readme.md
libs/llm-html/src/llm_html/: __init__.py
libs/llm-html/src/llm_html/helpers/: __init__.py  formatting.py  json_cleaner.py
libs/llm-html/tests/html/: __init__.py  test_chunker.py  test_classifiers.py  test_config.py  test_context.py  test_downsampler.py  test_hydration.py  test_outputs.py  test_pipeline.py  test_pydantic_models.py  test_scripts.py  test_shadow_dom.py
libs/prompts-chat/: Makefile  README.md  pyproject.toml
libs/prompts-chat/skill/: readme.md
libs/prompts-chat/src/prompts_chat/: __init__.py  _data.py  _models.py  _skill.py
libs/prompts-chat/tests/: test_skill.py
libs/server-agent/: Makefile  README.md  pyproject.toml
libs/server-agent/@docs/: 00-index.md  01-solution.md  02-architecture.md  03-models.md  04-commands.md  05-autonomy.md  06-reports.md  07-testing.md
libs/server-agent/skill/: config.py  readme.md
libs/server-agent/src/server_agent/: __init__.py  _docker.py  _healer.py  _models.py  _reporter.py  _security.py  _skill.py
libs/server-agent/tests/: test_docker.py  test_healer.py  test_models.py  test_reporter.py
libs/ssl-cert-checker/: .gitignore  Makefile  README.md  pyproject.toml
libs/ssl-cert-checker/skill/: config.py  readme.md
libs/ssl-cert-checker/src/ssl_cert_checker/: __init__.py  _checker.py  _models.py  _skill.py
libs/ssl-cert-checker/tests/: test_checker.py
libs/tg-notify/: Makefile  README.md  pyproject.toml
libs/tg-notify/skill/: config.py  readme.md
libs/tg-notify/src/tg_notify/: formatters.py  queue.py  sender.py
libs/tg-notify/tests/: conftest.py
libs/tg-notify/tests/telegram/: __init__.py  test_shortcuts.py  test_telegram.py  test_utils.py
