[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cmdop-sdkrouter"
version = "0.1.1"
description = "CMDOP skill wrapper for SDKRouter — unified AI services SDK"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "CMDOP Team", email = "team@cmdop.com" }
]
keywords = [
    "cmdop",
    "skill",
    "ai",
    "llm",
    "sdk",
    "openai",
    "vision",
    "audio",
    "search",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "cmdop",
    "cmdop-skill",
    "sdkrouter>=0.1.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
cmdop-sdkrouter = "cmdop_sdkrouter._skill:main"

[project.urls]
Homepage = "https://cmdop.com/skills/cmdop-sdkrouter/"

[tool.hatch.build.targets.wheel]
packages = ["src/cmdop_sdkrouter"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "README.md",
    "pyproject.toml",
    "LICENSE",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv.sources]
cmdop-skill = { path = "/Users/markinmatrix/Documents/htdocs/@CARAPIS/encar_parser_new/@projects/cmdop/projects/software/cmdop_sdk/python/cmdop_skill", editable = true }
cmdop = { path = "/Users/markinmatrix/Documents/htdocs/@CARAPIS/encar_parser_new/@projects/cmdop/projects/software/cmdop_sdk/python/cmdop", editable = true }

