[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-html"
version = "0.1.14"
description = "LLM-optimized HTML cleaning: hydration extraction, token budgets, multiple output formats"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "CMDOP Team", email = "team@cmdop.com" }
]
keywords = [
    "html",
    "llm",
    "cleaner",
    "beautifulsoup",
    "markdown",
    "hydration",
    "token-budget",
    "web-scraping",
    "cmdop",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup :: HTML",
    "Typing :: Typed",
]

dependencies = [
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "pydantic>=2.0.0",
    "python-toon>=0.1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://cmdop.com/skills/llm-html/"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_html"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "README.md",
    "pyproject.toml",
    "LICENSE",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]


[tool.uv.sources]
cmdop-skill = { path = "/Users/markinmatrix/Documents/htdocs/@CARAPIS/encar_parser_new/@projects/cmdop/projects/software/cmdop_sdk/python/cmdop_skill", editable = true }
cmdop = { path = "/Users/markinmatrix/Documents/htdocs/@CARAPIS/encar_parser_new/@projects/cmdop/projects/software/cmdop_sdk/python/cmdop", editable = true }

