[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "server-agent"
version = "0.1.1"
description = "Universal production server monitoring, healing, and reporting skill for cmdop"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "CARAPIS Team" }
]
keywords = [
    "server",
    "monitoring",
    "docker",
    "security",
    "devops",
    "self-healing",
    "cmdop",
]

dependencies = [
    "cmdop",
    "cmdop-skill",
    "pydantic>=2.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
server-agent = "server_agent._skill:main"

[project.urls]
Homepage = "https://cmdop.com/skills/server-agent/"

[tool.hatch.build.targets.wheel]
packages = ["src/server_agent"]

[tool.hatch.build.targets.sdist]
include = ["src/", "README.md", "pyproject.toml"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.uv.sources]
cmdop-skill = { path = "/Users/markinmatrix/Documents/htdocs/@CARAPIS/encar_parser_new/@projects/cmdop/projects/software/cmdop_sdk/python/cmdop_skill", editable = true }
cmdop = { path = "/Users/markinmatrix/Documents/htdocs/@CARAPIS/encar_parser_new/@projects/cmdop/projects/software/cmdop_sdk/python/cmdop", editable = true }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.6",
]
